<resources>
    <string name="app_name">Project 0</string>
    <string name="title">Nanodegree Apps</string>
    <string name="proj_one">Popular Movies</string>
    <string name="proj_two">Stock Hawk</string>
    <string name="proj_three">Build it Bigger</string>
    <string name="proj_four">Make Your App Material</string>
    <string name="proj_five">Go Ubiquitous</string>
    <string name="proj_six">Capstone</string>
</resources>
