<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.pelsoczi.nanodegreeportfolio.ApplicationActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        <Button
            android:id="@+id/one"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/proj_one"
            android:textColor="@color/buttonTextPositive" />
        <Button
            android:id="@+id/two"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/proj_two"
            android:textColor="@color/buttonTextPositive" />
        <Button
            android:id="@+id/three"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/proj_three"
            android:textColor="@color/buttonTextPositive" />
        <Button
            android:id="@+id/four"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/proj_four"
            android:textColor="@color/buttonTextPositive" />
        <Button
            android:id="@+id/five"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/proj_five"
            android:textColor="@color/buttonTextPositive" />
        <Button
            android:id="@+id/six"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/proj_six"
            android:textColor="@color/buttonTextPositive" />
    </GridLayout>

</RelativeLayout>
